compiler/src/test/resources/golden/errors/type_logical_non_bool.dawn
fn f() -> Bool = 3 && true
