compiler/src/test/resources/golden/errors/type_logical_non_bool.err
error: logical operators expect Bool, left side is Int
  --> type_logical_non_bool.dawn:1:18
  |
1 | fn f() -> Bool = 3 && true
  |                  ^
